--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.15",
@@ -22,7 +23,8 @@
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "sass": "^1.75.0",
-    "swiper": "^11.1.1"
+    "swiper": "^11.1.1",
+    "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -32,6 +34,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "typescript": "^5.5.4",
     "vite": "^5.2.0"
   }
 }
