--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,13 +27,16 @@
     "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
+    "@types/node": "^25.0.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.23",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "postcss": "^8.5.6",
     "typescript": "^5.5.4",
     "vite": "^5.2.0"
   }
